hersection small screen problem solved

--- a/src/components/heroSection/heroSection.css
+++ b/src/components/heroSection/heroSection.css
@@ -31,36 +31,30 @@
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
+  min-width: 100%;
   height: 100%;
   background-color: rgba(8, 8, 8, 0.8);
   opacity: 0.8;
   z-index: 1;
 }
-
 .searchform {
   position: relative;
   z-index: 2;
-  width: 100%;
+  text-align: left;
   display: flex;
   flex-direction: column;
-  /* justify-content: center; */
 }
-
 .hero-content {
   position: relative;
   z-index: 2;
   display: flex;
   align-items: center;
-  font-size: 2rem;
-  margin-top: 20%;
+  margin-top: 30%;
   text-shadow: 2px 2px rgba(0, 0, 0, 0.6);
 }
-
 .hero-content h1 {
-  font-size: 26px;
-  margin-left: 285px;
-  margin-bottom: 10px;
+  font-size: 1.8rem;
+  margin-bottom: 1rem;
 }
 
 .search-form {
@@ -77,17 +71,14 @@
   justify-content: space-around;
   margin-bottom: 1.5rem;
   border-radius: 10px 0px 0px 10px;
-
 }
 
 .dropdown-wrapper {
   position: relative;
   width: 280px;
   border-radius: 10px 0px 0px 10px;
-
   border: 3px solid rgba(178, 18, 37, 1);
   border-radius: 20px 0px 0px 20px;
-
 }
 
 .dropdown-wrapper-guest {
@@ -101,6 +92,7 @@
   border-radius: 20px 0px 0px 20px;
 
 }
+
 .dropdown-toggle-destination,
 .dropdown-toggle {
   padding: 1rem;
@@ -119,6 +111,7 @@
   color: #333;
   font-size: 1rem;
 }
+
 .dropdown-menu {
   position: absolute;
   top: 100%;
@@ -129,10 +122,12 @@
   border-radius: 8px;
   box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.1);
   margin-top: 0.5rem;
-  z-index: 100;
+  z-index: 1000;
   display: none;
 }
-
+.show {
+  display: block; /* Ensure it is displayed when the menu is open */
+}
 .dropdown-menu.show {
   display: block;
 }
@@ -145,7 +140,7 @@
 }
 
 .dropdown-item:hover {
-  /* background-color: #bab7b7; */
+  background-color: #f4f3f3;
 }
 
 .date-picker {
@@ -153,7 +148,7 @@
   outline: none;
   padding: 1.1rem;
   font-size: 0.9rem;
-  width: 190px;
+  max-width: 190px;
 }
 
 .search-button {
@@ -167,14 +162,14 @@
   border-radius: 0px 20px 20px 0px;
 }
 
-
 .search-button:hover {
   background-color: #8e1c25;
 }
 
 .counter-controls {
-  display: flex;
-  align-items: center;
+  display: flex; 
+  align-items: center; 
+  gap: 8px; 
 }
 
 .counter-btn {
@@ -188,5 +183,5 @@
 }
 
 .counter-btn:hover {
-  background-color: #ccc;
+  background-color: #bab7b7;
 }
